--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,10 @@ authors = ["Mateus Lucas <mateuslucas1879@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.10.6"
+
+
+
 
 
 [tool.poetry.group.dev.dependencies]
@@ -20,6 +23,17 @@ taskipy = "^1.12.0"
 [tool.poetry.group.doc.dependencies]
 mkdocs-material = "^9.4.8"
 mkdocstrings = "^0.23.0"
+
+
+[tool.poetry.group.code.dependencies]
+pandas = "^1.3.3"
+numpy = ">=1.21,<2.0"
+matplotlib = "^3.8.1"
+seaborn = "^0.13.0"
+
+
+
+
 
 [build-system]
 requires = ["poetry-core"]
