--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,8 @@ authors = ["Mateus Lucas <mateuslucas1879@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10.6"
-
-
-
+python = "^3.10"
+matplotlib = "^3.8.2"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -26,14 +24,8 @@ mkdocstrings = "^0.23.0"
 
 
 [tool.poetry.group.code.dependencies]
-pandas = "^1.3.3"
-numpy = ">=1.21,<2.0"
-matplotlib = "^3.8.1"
-seaborn = "^0.13.0"
-sklearn = "^0.0.post11"
-
-
-
+pandas = "^2.1.3"
+numpy = "^1.26.2"
 
 
 [build-system]
